fixed img size and gap between h3 and p

--- a/styles/style.css
+++ b/styles/style.css
@@ -62,9 +62,16 @@ h2{
 .info__card{
     display:flex;
     flex-direction: column;
+    text-align: center;
+}
+.info__card .container{
+    padding: 10%;
+    display: flex;
+    flex-direction: column;
+    gap:12px
 }
 .info__img{
-    height: 60%;
+    height:250px;
 }
 .info__img img{
     width:100%;
